--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 <body>
 
     <header class="header">
+        <a href="#" class="logo">ELECTRIPARTES</a>
+        <a href="#" class="logo">
+    <img src="logo-infrarojo.png" alt="ELECTRIPARTES INFRAROJO" width="180">
+</a>
+        <a href="https://api.whatsapp.com/send/?phone=584145483400" target="_blank" class="btn btn-primary">
+    <img src="whatsapp-icon.png" alt="WhatsApp" width="20" style="vertical-align: middle; margin-right: 5px;"> Contactar por WhatsApp
+</a>
         <div class="container">
             <a href="#" class="logo">ELECTRIPARTES</a>
             <button class="menu-toggle" aria-expanded="false" aria-controls="navigation">
@@ -29,6 +36,7 @@
 
     <main>
         <section class="hero">
+            <a href="#contacto" class="btn btn-primary">Solicitar Cotización Ahora</a>
             <div class="container">
                 <h1>Líder en Componentes Eléctricos de **Calidad**</h1>
                 <p>Encuentra la solución precisa para automatización industrial, control y potencia. Stock garantizado de las marcas líderes.</p>
@@ -104,3 +112,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
