--- a/index.html
+++ b/index.html
@@ -1,30 +1,21 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ELECTRIPARTES | Líder en Componentes Eléctricos de Calidad</title>
+    <title>ELECTRIPARTES - Líder en Componentes Eléctricos de Calidad</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <script src="script.js" defer></script>
 </head>
 <body>
 
-    <header class="header">
-        <a href="#" class="logo">ELECTRIPARTES</a>
-        <a href="#" class="logo">
-    <img src="logo-infrarojo.png" alt="ELECTRIPARTES INFRAROJO" width="180">
-</a>
-        <a href="https://api.whatsapp.com/send/?phone=584145483400" target="_blank" class="btn btn-primary">
-    <img src="whatsapp-icon.png" alt="WhatsApp" width="20" style="vertical-align: middle; margin-right: 5px;"> Contactar por WhatsApp
-</a>
+    <header class="main-header">
         <div class="container">
-            <a href="#" class="logo">ELECTRIPARTES</a>
-            <button class="menu-toggle" aria-expanded="false" aria-controls="navigation">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
-            <nav id="navigation" class="nav">
+            <a href="#" class="logo">
+                <img src="logo-infrarojo.png" alt="ELECTRIPARTES INFRAROJO" width="180">
+            </a>
+            <nav class="main-nav">
                 <ul>
                     <li><a href="#productos">Productos</a></li>
                     <li><a href="#servicios">Servicios</a></li>
@@ -34,82 +25,72 @@
         </div>
     </header>
 
-    <main>
-        <section class="hero">
-            <a href="#contacto" class="btn btn-primary">Solicitar Cotización Ahora</a>
-            <div class="container">
-                <h1>Líder en Componentes Eléctricos de **Calidad**</h1>
-                <p>Encuentra la solución precisa para automatización industrial, control y potencia. Stock garantizado de las marcas líderes.</p>
-                <a href="#contacto" class="btn btn-primary">Solicitar Cotización Ahora</a>
-                <div class="hero-image">
-                    <img src="placeholder-hero.jpg" alt="Componentes eléctricos variados de alta calidad">
+    <section class="hero">
+        <div class="container">
+            <h1>Líder en Componentes Eléctricos de **Calidad**</h1>
+            <p>Encuentra la solución precisa para automatización industrial, control y potencia. Stock garantizado de las marcas líderes.</p>
+            
+            <a href="https://api.whatsapp.com/send/?phone=584145483400" target="_blank" class="btn btn-primary">
+                <img src="whatsapp-icon.png" alt="WhatsApp" width="20" style="vertical-align: middle; margin-right: 5px;"> Contactar por WhatsApp
+            </a>
+
+            <div class="hero-image">
+                <img src="placeholder-hero.jpg" alt="Componentes eléctricos variados de alta calidad">
+                <p class="caption">Componentes eléctricos variados de alta calidad</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="productos" class="features">
+        <div class="container">
+            <h2>Nuestros Productos Más Solicitados</h2>
+            <div class="feature-grid">
+                <div class="feature-item">
+                    <h3>Automatización y Control</h3>
+                    <p>Sistemas PLC, HMI, sensores de proximidad y finales de carrera.</p>
+                </div>
+                <div class="feature-item">
+                    <h3>Protección y Potencia</h3>
+                    <p>Breakers, contactores y relés térmicos de alta fiabilidad.</p>
+                </div>
+                <div class="feature-item">
+                    <h3>Conexión y Cableado</h3>
+                    <p>Terminales, borneras y cables de potencia y control.</p>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <section id="productos" class="featured-products">
-            <div class="container">
-                <h2>Nuestros Productos Más Solicitados</h2>
-                <div class="product-grid">
-                    <article class="product-card">
-                        <h3>Automatización y Control</h3>
-                        <p>PLCs, relés, temporizadores y sensores para máxima eficiencia.</p>
-                        <a href="#" class="btn btn-secondary">Ver Catálogo</a>
-                    </article>
-                    <article class="product-card">
-                        <h3>Protección y Potencia</h3>
-                        <p>Breakers, contactores y arrancadores de las mejores marcas.</p>
-                        <a href="#" class="btn btn-secondary">Ver Catálogo</a>
-                    </article>
-                    <article class="product-card">
-                        <h3>Conexión y Cableado</h3>
-                        <p>Terminales, borneras y cables resistentes para toda aplicación.</p>
-                        <a href="#" class="btn btn-secondary">Ver Catálogo</a>
-                    </article>
-                </div>
-            </div>
-        </section>
+    <section id="servicios" class="services">
+        <div class="container">
+            <h2>Servicios Integrales</h2>
+            <p>Ofrecemos asesoría especializada y cotizaciones a medida para proyectos industriales y comerciales.</p>
+            <ul class="service-list">
+                <li>Asesoría técnica para selección de componentes.</li>
+                <li>Cotizaciones rápidas y competitivas.</li>
+                <li>Entrega a domicilio y envíos nacionales.</li>
+            </ul>
+        </div>
+    </section>
 
-        <section id="servicios" class="services">
-            <div class="container">
-                <h2>Servicios de Valor Agregado</h2>
-                <ul>
-                    <li>Asesoría Técnica Especializada</li>
-                    <li>Entrega Rápida a Nivel Nacional</li>
-                    <li>Garantía Extendida en Componentes</li>
-                </ul>
-                <a href="#contacto" class="btn btn-primary">Hablar con un Experto</a>
-            </div>
-        </section>
+    <section id="contacto" class="contact">
+        <div class="container">
+            <h2>¿Listo para Cotizar?</h2>
+            <p>Contáctanos hoy mismo y recibe una respuesta inmediata. Tu socio de confianza en componentes eléctricos.</p>
+            <a href="https://api.whatsapp.com/send/?phone=584145483400" target="_blank" class="btn btn-secondary">
+                 Escríbenos por WhatsApp
+            </a>
+            <p class="contact-info">Correo: ventas@electripartesinfrajo.com | Teléfono: +58 414-XXX-XXXX</p>
+        </div>
+    </section>
 
-        <section id="contacto" class="contact">
-            <div class="container">
-                <h2>Contáctanos y Cotiza</h2>
-                <p>Estamos listos para atender tus requerimientos. Llámanos o escríbenos.</p>
-                <form class="contact-form">
-                    <label for="name">Nombre:</label>
-                    <input type="text" id="name" name="name" required>
-
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
-                    
-                    <label for="message">Mensaje / Requerimiento:</label>
-                    <textarea id="message" name="message" rows="4" required></textarea>
-
-                    <button type="submit" class="btn btn-primary">Enviar Solicitud</button>
-                </form>
-            </div>
-        </section>
-    </main>
-
-    <footer class="footer">
+    <footer class="main-footer">
         <div class="container">
             <p>&copy; 2025 ELECTRIPARTES. Todos los derechos reservados.</p>
-            <p><a href="#">Política de Privacidad</a> | <a href="#">Términos y Condiciones</a></p>
+            <p>Desarrollado con Código Abierto y Vercel.</p>
         </div>
     </footer>
 
-    <script src="script.js"></script>
 </body>
 </html>
 
