--- a/index.html
+++ b/index.html
@@ -25,18 +25,15 @@
     </header>
 
     <section class="hero">
+        <div class="hero-overlay"></div> 
         <div class="container">
-            <h1>Líder en Componentes Eléctricos de **Calidad**</h1>
+            <h1>LÍDER EN COMPONENTES ELÉCTRICOS DE CALIDAD</h1>
             <p>Encuentra la solución precisa para automatización industrial, control y potencia. Stock garantizado de las marcas líderes.</p>
             
             <a href="https://api.whatsapp.com/send/?phone=584145483400" target="_blank" class="btn btn-primary">
                 <img src="whatsapp-icon.png" alt="WhatsApp" width="20" style="vertical-align: middle; margin-right: 5px;"> Contactar por WhatsApp
             </a>
-
-            <div class="hero-image">
-                <img src="placeholder-hero.jpg" alt="Componentes eléctricos variados de alta calidad">
-                <p class="caption">Componentes eléctricos variados de alta calidad</p>
-            </div>
+            
         </div>
     </section>
 
