--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li><a href="#contacto">Contacto</a></li>
                 </ul>
             </nav>
-            <a href="https://api.whatsapp.com/send/?phone=584145483400" target="_blank" class="btn btn-header">Solicita tu cotización</a>
+            <a href="https://api.whatsapp.com/send/?phone=584145483400&text&type=phone_number&app_absent=0" target="_blank" class="btn btn-header">Solicita tu cotización</a>
         </div>
     </header>
 
@@ -32,7 +32,7 @@
             <h1>LÍDER EN COMPONENTES ELÉCTRICOS DE CALIDAD</h1>
             <p>Encuentra la solución precisa para automatización industrial, control y potencia. Stock garantizado de las marcas líderes.</p>
             
-            <a href="https://api.whatsapp.com/send/?phone=584145483400" target="_blank" class="btn btn-primary">
+            <a href="https://api.whatsapp.com/send/?phone=584145483400&text&type=phone_number&app_absent=0" target="_blank" class="btn btn-primary">
                 <img src="whatsapp-icon.png" alt="WhatsApp" width="20" style="vertical-align: middle; margin-right: 5px;"> Contactar por WhatsApp
             </a>
             
@@ -110,15 +110,15 @@
             <div class="asesor-list">
                 <div class="asesor-item">
                     <p>DANIELA PÉREZ</p>
-                    <a href="https://api.whatsapp.com/send/?phone=58414XXXXXXX" target="_blank" class="btn-contactar">CONTACTAR</a>
-                    <a href="https://api.whatsapp.com/send/?phone=58414XXXXXXX" target="_blank" class="whatsapp-icon-link">
+                    <a href="https://api.whatsapp.com/send/?phone=584145483400&text&type=phone_number&app_absent=0" target="_blank" class="btn-contactar">CONTACTAR</a>
+                    <a href="https://api.whatsapp.com/send/?phone=584145483400&text&type=phone_number&app_absent=0" target="_blank" class="whatsapp-icon-link">
                         <img src="whatsapp-icon-dark.png" alt="WhatsApp" width="24">
                     </a>
                 </div>
                 <div class="asesor-item">
                     <p>KEVIN PÉREZ</p>
-                    <a href="https://api.whatsapp.com/send/?phone=58414YYYYYYY" target="_blank" class="btn-contactar">CONTACTAR</a>
-                    <a href="https://api.whatsapp.com/send/?phone=58414YYYYYYY" target="_blank" class="whatsapp-icon-link">
+                    <a href="https://api.whatsapp.com/send/?phone=584145487771&text&type=phone_number&app_absent=0" target="_blank" class="btn-contactar">CONTACTAR</a>
+                    <a href="https://api.whatsapp.com/send/?phone=584145487771&text&type=phone_number&app_absent=0" target="_blank" class="whatsapp-icon-link">
                         <img src="whatsapp-icon-dark.png" alt="WhatsApp" width="24">
                     </a>
                 </div>
@@ -152,7 +152,7 @@
                     <p>0414-548-7771</p>
                 </div>
                 <div class="map-container">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3926.236979669661!2d-69.29653138520265!3d10.071689292817452!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e87d55949d21469%3A0x7d6f5f928a6f42c1!2sCarrera%2018%2C%20Barquisimeto%203001%2C%20Lara!5e0!3m2!1ses!2sve!4v1634567890123!5m2!1ses!2sve" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3923.639645558509!2d-69.30902892557613!3d10.063604972740755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e87609a0a0d4c81%3A0x89798516086f8742!2sCarrera%2018%2C%20esquina%20calle%2049%2C%20Edif.%20Deitos%20(edif.%20Ladrillos)%20Oficina%2005!5e0!3m2!1ses!2sve!4v1689269784321!5m2!1ses!2sve" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
@@ -165,7 +165,7 @@
                 <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
                 <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
             </div>
-            <p>&copy; 2025 ELECTRIPARTES. Todos los derechos reservados.</p>
+            <p>© 2025 ELECTRIPARTES. Todos los derechos reservados.</p>
         </div>
     </footer>
 
