--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ELECTRIPARTES - Líder en Componentes Eléctricos de Calidad</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
+    <script src="script.js" defer></script> 
 </head>
 <body>
 
@@ -41,7 +41,15 @@
 
     <section class="marcas">
         <div class="container">
-            <img src="slider-productos-schneider.jpg" alt="Productos Schneider Electric" class="full-width-image">
+            <div class="carousel-container">
+                <div class="carousel-track">
+                    <img src="slider-productos-schneider.jpg" alt="Marca Schneider Electric" class="carousel-slide">
+                    <img src="slider-productos-exceline.jpg" alt="Marca Exceline" class="carousel-slide">
+                    <img src="slider-productos-siemens.jpg" alt="Marca Siemens" class="carousel-slide">
+                    </div>
+                <div class="carousel-dots-container">
+                    </div>
+            </div>
         </div>
     </section>
 
