--- a/index.html
+++ b/index.html
@@ -12,8 +12,22 @@
     <header class="main-header">
         <div class="container">
             <a href="#" class="logo">
-                <img src="logo-infrarojo.png" alt="ELECTRIPARTES INFRAROJO" width="180">
-            </a>
+<header>
+    <a href="/" class="logo-link">
+        <img src="logo-infrarojo.png" alt="Electripartes Infrarojo Logo Oficial">
+    </a>
+    
+    <nav>
+        <ul>
+            <li><a href="/">Inicio</a></li>
+            <li><a href="/productos">Productos</a></li>
+            <li><a href="/nosotros">Nosotros</a></li>
+            <li><a href="/contacto">Contacto</a></li>
+        </ul>
+    </nav>
+    
+    <a href="/cotizacion" class="cta-button">Solicita tu cotización</a>
+</header>            </a>
             <nav class="main-nav">
                 <ul>
                     <li><a href="#">Inicio</a></li>
@@ -179,3 +193,4 @@
 
 </body>
 </html>
+
