--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Electripartes Infrarojo | Componentes Eléctricos Industriales</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
 
@@ -29,19 +29,15 @@
         <div class="hero-content">
             <h1>LÍDER EN COMPONENTES ELÉCTRICOS DE CALIDAD</h1>
             <p>Encuentra la solución precisa para automatización industrial, control y potencia. Stock garantizado de las marcas líderes.</p>
-            <a href="/contacto" class="whatsapp-cta-button">
-                <img src="[URL_IMAGEN_WHATSAPP]" alt="Icono de WhatsApp"> Contactar por WhatsApp
+            <a href="https://wa.me/[TU_NUMERO_DE_WHATSAPP]" target="_blank" class="whatsapp-cta-button">
+                <img src="whatsapp-icon.png" alt="Icono de WhatsApp"> Contactar por WhatsApp
             </a>
         </div>
     </section>
 
     <section class="content-section">
-        <h2 class="section-title">Nuestras Soluciones Clave</h2>
-        <p>Aquí se insertaría el HTML de los 4 rubros que creamos para categorizar el catálogo. (Bloque de Código HTML)</p>
-    </section>
-
-    <section class="about-section">
-        <p>Texto optimizado de "Acerca de Nosotros": Somos Electripartes Infrarojo, tu aliado estratégico con 10 años en el mercado venezolano...</p>
+        <h2 class="section-title">Nuestras Soluciones Clave: Automatización, Medición y Más</h2>
+        <p>Este es el espacio para destacar nuestros rubros principales. Utilizamos el código nativo de Squarespace/HTML para la cuadrícula 2x2.</p>
     </section>
 
     <footer>
@@ -49,9 +45,9 @@
         <div class="footer-links">
             <a href="/privacidad">Política de Privacidad</a>
             <a href="/terminos">Términos y Condiciones</a>
-        </div>
+            </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.js"></script> 
 </body>
 </html>
