--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                     <div class="carousel-slide"><img src="exceline.jpg" alt="Logo Exceline"></div>
                 </div>
                 <div class="carousel-dots" id="carouselDots"></div>
-                <button class="carousel-btn prev" aria-label="Anterior">&#10094;</button>
-                <button class="carousel-btn next" aria-label="Siguiente">&#10095;</button>
+                <button class="carousel-btn prev" aria-label="Anterior">❮</button>
+                <button class="carousel-btn next" aria-label="Siguiente">❯</button>
             </div>
         </section>
 
@@ -158,7 +158,7 @@
     </main>
 
     <footer class="main-footer">
-        <p>&copy; 2025 ELECTRIPARTES. Todos los derechos reservados. Desarrollado por WebGenius Pro.</p>
+        <p>© 2025 ELECTRIPARTES. Todos los derechos reservados. Desarrollado por WebGenius Pro.</p>
     </footer>
 
     <script src="script.js"></script>
