--- a/index.html
+++ b/index.html
@@ -139,7 +139,17 @@
             border-bottom: 1px solid #222;
             padding: 15px 0;
         }
-
+<section id="contacto" class="contacto-section">
+    <h2>ASESORES DE VENTA</h2>
+    <div class="asesor">
+        <span>DANIELA PÉREZ</span>
+        <a href="https://wa.me/584145483400?text=Hola,%20vengo%20de%20la%20página%20web%20y%20deseo%20una%20cotización" class="btn-asesor">BOTÓN</a>
+    </div>
+    <div class="asesor">
+        <span>KEVIN PÉREZ</span>
+        <a href="https://wa.me/ESCRIBE_AQUI_EL_NUMERO_DE_KEVIN?text=Hola,%20vengo%20de%20la%20página%20web%20y%20deseo%20una%20cotización" class="btn-asesor">BOTÓN</a>
+    </div>
+</section>
         .btn-asesor { background-color: #4c8bf5; color: white; padding: 10px 20px; text-decoration: none; border-radius: 4px; }
 
         .form-map-container {
@@ -282,4 +292,5 @@
     </footer>
 
 </body>
+
 </html>
