--- a/contacto.html
+++ b/contacto.html
@@ -23,6 +23,8 @@
 
         /* --- NAVEGACIÓN --- */
         nav {
+        <div class="logo">
+        <img src="img/logo.png" alt="Logo Infrarojo">
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -212,4 +214,5 @@
     </footer>
 
 </body>
+
 </html>
