--- a/index.html
+++ b/index.html
@@ -7,133 +7,32 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
-        :root {
-            --azul-fondo: #0a1931;
-            --azul-footer: #050c1a;
-            --blanco: #ffffff;
-        }
-
-        body {
-            margin: 0;
-            font-family: 'Roboto', sans-serif;
-            background-color: var(--azul-fondo);
-            color: var(--blanco);
-        }
-
-        /* --- NAVEGACIÓN --- */
-        nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 15px 5%;
-            background: var(--azul-fondo);
-        }
+        :root { --azul: #0a1931; --blanco: #ffffff; }
+        body { margin: 0; font-family: 'Roboto', sans-serif; background-color: var(--azul); color: white; }
+        nav { display: flex; justify-content: space-between; align-items: center; padding: 20px 5%; }
         .logo img { height: 60px; }
         .nav-links { list-style: none; display: flex; gap: 20px; }
-        .nav-links a { color: white; text-decoration: none; font-weight: bold; font-size: 14px; }
-
-        /* --- HERO BANNER --- */
-        .hero {
-            height: 450px;
-            background: linear-gradient(rgba(10, 25, 49, 0.6), rgba(10, 25, 49, 0.6)), 
-                        url('https://images.unsplash.com/photo-1581092160562-40aa08e78837?auto=format&fit=crop&w=1350&q=80');
-            background-size: cover;
-            background-position: center;
-            display: flex;
-            align-items: center;
-            padding: 0 5%;
-        }
-        .hero h1 {
-            font-size: 3.5rem;
-            max-width: 800px;
-            line-height: 1.1;
-            text-transform: uppercase;
-            font-weight: 900;
-            margin: 0;
-        }
-
-        /* --- CATALOGO --- */
-        .catalogo-container {
-            padding: 40px 5%;
-            text-align: center;
-        }
-        .catalogo-container h2 {
-            font-size: 2.5rem;
-            margin-bottom: 30px;
-            font-weight: 900;
-        }
-        .grid-catalogo {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 10px;
-            margin-bottom: 30px;
-        }
-        .card {
-            padding: 20px 10px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-between;
-            min-height: 400px;
-        }
-        .card img { width: 90%; object-fit: contain; margin-bottom: 15px; }
-        .card h3 { font-size: 1.3rem; font-weight: 900; line-height: 1.2; margin: 10px 0; height: 50px; }
+        .nav-links a { color: white; text-decoration: none; font-weight: bold; }
         
-        /* Botones azules debajo de cada categoría */
-        .btn-blue {
-            background-color: #4c8bf5;
-            color: white;
-            border: none;
-            padding: 8px 35px;
-            cursor: pointer;
-            font-weight: bold;
-            font-size: 12px;
-            text-decoration: none;
-            margin-top: 15px;
+        .hero { 
+            height: 400px; 
+            background: linear-gradient(rgba(10,25,49,0.5), rgba(10,25,49,0.5)), url('img/banner.jpg'); 
+            background-size: cover; background-position: center;
+            display: flex; align-items: center; justify-content: center; text-align: center;
         }
+        .hero h1 { font-size: 3rem; font-weight: 900; padding: 0 10%; }
 
-        /* Colores exactos de las secciones */
-        .maniobra { background-color: #4CAF50; }
-        .medicion { background-color: #f44336; }
-        .herramientas { background-color: #00bcd4; }
-        .automatizacion { background-color: #673ab7; }
+        .catalogo-titulo { text-align: center; margin: 40px 0; font-size: 2.5rem; }
+        .grid-productos { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; padding: 0 5% 50px; }
+        .card img { width: 100%; border-radius: 5px; transition: 0.3s; }
+        .card img:hover { transform: scale(1.05); }
 
-        /* --- FOOTER --- */
-        footer {
-            background-color: var(--azul-footer);
-            padding: 30px 5%;
-            border-top: 1px solid rgba(255,255,255,0.1);
-        }
-        .footer-top {
-            display: flex;
-            justify-content: space-between;
-            align-items: flex-start;
-            margin-bottom: 20px;
-        }
-        .footer-text { max-width: 600px; }
-        .footer-text h4 { margin: 0 0 10px 0; font-size: 1.2rem; }
-        .footer-text p { font-size: 0.9rem; color: #ccc; margin: 0; }
-        
-        .social-icons { display: flex; gap: 15px; }
-        .social-icons a { color: white; font-size: 20px; }
-
-        .copyright {
-            text-align: center;
-            font-size: 0.7rem;
-            color: #666;
-            margin-top: 20px;
-        }
-
-        @media (max-width: 768px) {
-            .hero h1 { font-size: 2rem; }
-            .footer-top { flex-direction: column; gap: 20px; }
-        }
+        footer { background: #050c1a; padding: 30px 5%; border-top: 1px solid #333; text-align: center; }
     </style>
 </head>
 <body>
-
     <nav>
-        <div class="logo"><img src="URL_DE_TU_LOGO" alt="Logo"></div>
+        <div class="logo"><img src="img/logo.png" alt="Logo"></div>
         <ul class="nav-links">
             <li><a href="index.html">Inicio</a></li>
             <li><a href="contacto.html">Contacto</a></li>
@@ -145,56 +44,16 @@
         <h1>SOLUCIONES PARA LA INDUSTRIA Y ALGO MAS!..</h1>
     </section>
 
-    <section class="catalogo-container">
-        <h2>Catalogo De Productos</h2>
-        <div class="grid-catalogo">
-            <div class="card-wrapper">
-                <div class="card maniobra">
-                    <img src="URL_IMAGEN_MANIOBRA" alt="Maniobra">
-                    <h3>MANIOBRA</h3>
-                </div>
-                <a href="#" class="btn-blue">IR</a>
-            </div>
-            <div class="card-wrapper">
-                <div class="card medicion">
-                    <img src="URL_IMAGEN_MEDICION" alt="Medicion">
-                    <h3>MEDICIÓN E INDICACIÓN</h3>
-                </div>
-                <a href="#" class="btn-blue">IR</a>
-            </div>
-            <div class="card-wrapper">
-                <div class="card herramientas">
-                    <img src="URL_IMAGEN_HERRAMIENTAS" alt="Herramientas">
-                    <h3>HERRAMIENTAS</h3>
-                </div>
-                <a href="#" class="btn-blue">IR</a>
-            </div>
-            <div class="card-wrapper">
-                <div class="card automatizacion">
-                    <img src="URL_IMAGEN_AUTOMATIZACION" alt="Automatizacion">
-                    <h3>AUTOMATIZACIÓN Y CONTROL</h3>
-                </div>
-                <a href="#" class="btn-blue">IR</a>
-            </div>
-        </div>
-    </section>
+    <h2 class="catalogo-titulo">Catalogo De Productos</h2>
+    <div class="grid-productos">
+        <div class="card"><img src="img/maniobra.png" alt="Maniobra"></div>
+        <div class="card"><img src="img/medicion.png" alt="Medicion"></div>
+        <div class="card"><img src="img/herramientas.png" alt="Herramientas"></div>
+        <div class="card"><img src="img/control.png" alt="Automatizacion"></div>
+    </div>
 
     <footer>
-        <div class="footer-top">
-            <div class="footer-text">
-                <h4>Electripartes Infrarojo</h4>
-                <p>Comercializamos equipos de instrumentación, control, automatización y electricidad trabajamos con las marcas líderes en el mercado</p>
-            </div>
-            <div class="social-icons">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="https://wa.me/584145483400"><i class="fab fa-whatsapp"></i></a>
-            </div>
-        </div>
-        <div class="copyright">
-            © 2026 Electripartes Infrarojo. Todos los derechos reservados.
-        </div>
+        <p>Electripartes Infrarojo - Carrera 18 con Calle 49, Barquisimeto.</p>
     </footer>
-
 </body>
 </html>
