--- a/nosotros.html
+++ b/nosotros.html
@@ -2,196 +2,45 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros | Electripartes Infrarojo</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
-        :root {
-            --azul-fondo: #0a1931;
-            --azul-footer: #050c1a;
-            --blanco: #ffffff;
-        }
-
-        body {
-            margin: 0;
-            font-family: 'Roboto', sans-serif;
-            background-color: var(--azul-fondo);
-            color: var(--blanco);
-            line-height: 1.6;
-        }
-
-        /* --- NAVEGACIÓN --- */
-        nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 20px 5%;
-            background: var(--azul-fondo);
-        }
+        body { margin: 0; font-family: 'Roboto', sans-serif; background: #0a1931; color: white; }
+        nav { display: flex; justify-content: space-between; padding: 20px 5%; align-items: center; }
         .logo img { height: 50px; }
-        .nav-links { list-style: none; display: flex; gap: 20px; }
-        .nav-links a { color: white; text-decoration: none; font-weight: bold; font-size: 14px; }
-
-        /* --- CARRUSEL DE IMÁGENES --- */
-        .carrusel-container {
-            position: relative;
-            max-width: 900px;
-            margin: 40px auto;
-            overflow: hidden;
-            border-radius: 4px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.5);
-        }
-
-        .slides {
-            display: flex;
-            transition: transform 0.5s ease-in-out;
-            width: 300%; /* Para 3 imágenes */
-        }
-
-        .slide {
-            width: 100%;
-        }
-
-        .slide img {
-            width: 100%;
-            display: block;
-            height: 450px;
-            object-fit: cover;
-        }
-
-        /* Flechas */
-        .prev, .next {
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            background: rgba(0,0,0,0.5);
-            color: white;
-            padding: 15px;
-            cursor: pointer;
-            border: none;
-            font-size: 20px;
-            border-radius: 50%;
-            margin: 0 10px;
-            transition: 0.3s;
-        }
-        .prev:hover, .next:hover { background: rgba(255,255,255,0.3); }
-        .next { right: 0; }
-
-        /* Puntos */
-        .dots { text-align: center; margin-bottom: 20px; }
-        .dot {
-            height: 12px;
-            width: 12px;
-            margin: 0 5px;
-            background-color: #555;
-            border-radius: 50%;
-            display: inline-block;
-            cursor: pointer;
-        }
-        .active { background-color: white; }
-
-        /* --- TEXTO NOSOTROS --- */
-        .nosotros-texto {
-            padding: 0 8% 60px;
-            max-width: 1100px;
-            margin: 0 auto;
-            text-align: left;
-            font-size: 1.15rem;
-        }
-
-        /* --- FOOTER --- */
-        footer { background-color: var(--azul-footer); padding: 40px 5%; border-top: 1px solid rgba(255,255,255,0.1); }
-        .footer-content { display: flex; justify-content: space-between; align-items: center; }
-        .footer-brand h4 { margin: 0; font-size: 1.4rem; }
-        .social-icons { display: flex; gap: 15px; }
-        .social-icons a { color: white; font-size: 20px; }
-
-        @media (max-width: 768px) {
-            .slide img { height: 300px; }
-            .footer-content { flex-direction: column; text-align: center; gap: 20px; }
-        }
+        .carrusel { width: 80%; max-width: 800px; margin: 40px auto; overflow: hidden; position: relative; border-radius: 8px; }
+        .slides { display: flex; transition: 0.5s; width: 300%; }
+        .slides img { width: 33.33%; height: 450px; object-fit: cover; }
+        .texto { padding: 40px 10%; line-height: 1.8; font-size: 1.1rem; }
     </style>
 </head>
 <body>
-
     <nav>
-        <div class="logo"><img src="URL_DE_TU_LOGO" alt="Logo"></div>
-        <ul class="nav-links">
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="nosotros.html">Nosotros</a></li>
-        </ul>
+        <div class="logo"><img src="img/logo.png" alt="Logo"></div>
+        <div style="display:flex; gap:20px;">
+            <a href="index.html" style="color:white; text-decoration:none;">Inicio</a>
+            <a href="contacto.html" style="color:white; text-decoration:none;">Contacto</a>
+        </div>
     </nav>
 
-    <main>
-        <div class="carrusel-container">
-            <div class="slides" id="slides">
-                <div class="slide">
-                    <img src="URL_IMAGEN_1" alt="Local 1">
-                </div>
-                <div class="slide">
-                    <img src="URL_IMAGEN_2" alt="Local 2">
-                </div>
-                <div class="slide">
-                    <img src="URL_IMAGEN_3" alt="Local 3">
-                </div>
-            </div>
-            
-            <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
-            <button class="next" onclick="moveSlide(1)">&#10095;</button>
+    <div class="carrusel">
+        <div class="slides" id="slider">
+            <img src="img/tienda1.jpg">
+            <img src="img/tienda2.jpg">
+            <img src="img/tienda3.jpg">
         </div>
+    </div>
 
-        <div class="dots">
-            <span class="dot active" onclick="currentSlide(0)"></span>
-            <span class="dot" onclick="currentSlide(1)"></span>
-            <span class="dot" onclick="currentSlide(2)"></span>
-        </div>
-
-        <div class="nosotros-texto">
-            <p>Somos tu aliado estratégico en Instrumentación, Control, Automatización y Electricidad. Con más de 10 años de experiencia en el mercado venezolano, optimizamos y aseguramos el rendimiento de tus sistemas. En tu negocio, la eficiencia y la seguridad dependen de la calidad de cada componente. Por eso, te ofrecemos una lista de precios exclusivos con productos de las marcas más confiables y reconocidas globalmente, garantizando que tu inversión sea duradera y eficiente. Nuestra dedicación y calidad nos avalan: el 100% de nuestros clientes nos recomiendan. ¿Estás listo para llevar tus sistemas al siguiente nivel? Contáctanos y descubre cómo podemos ayudarte.</p>
-        </div>
-    </main>
-
-    <footer>
-        <div class="footer-content">
-            <div class="footer-brand">
-                <h4>Electripartes Infrarojo</h4>
-                <p style="font-size: 0.85rem; color: #bbb; margin-top:5px;">Comercializamos equipos de instrumentación, control, automatización y electricidad...</p>
-            </div>
-            <div class="social-icons">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="https://wa.me/584145483400"><i class="fab fa-whatsapp"></i></a>
-            </div>
-        </div>
-    </footer>
+    <div class="texto">
+        <p>Somos tu aliado estratégico en Instrumentación, Control, Automatización y Electricidad. Con más de 10 años de experiencia en el mercado venezolano...</p>
+    </div>
 
     <script>
-        let currentIndex = 0;
-        const slides = document.getElementById('slides');
-        const dots = document.querySelectorAll('.dot');
-
-        function moveSlide(step) {
-            currentIndex = (currentIndex + step + 3) % 3;
-            updateCarousel();
-        }
-
-        function currentSlide(index) {
-            currentIndex = index;
-            updateCarousel();
-        }
-
-        function updateCarousel() {
-            slides.style.transform = `translateX(-${currentIndex * 33.333}%)`;
-            dots.forEach((dot, i) => {
-                dot.classList.toggle('active', i === currentIndex);
-            });
-        }
-
-        // Cambio automático cada 5 segundos
-        setInterval(() => moveSlide(1), 5000);
+        let i = 0;
+        setInterval(() => {
+            i = (i + 1) % 3;
+            document.getElementById('slider').style.transform = `translateX(-${i * 33.33}%)`;
+        }, 4000);
     </script>
-
 </body>
 </html>
