--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
         }
         .btn-ir:hover { background-color: #357ebd; }
 
-        footer { background: #050c1a; padding: 40px 5%; border-top: 1px solid #333; text-align: left; }
+        footer { background: #050c1a; padding: 40px 5%; border-top: 1px solid #333; }
         .footer-content { display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; gap: 20px; }
-        .social-icons { display: flex; gap: 15px; font-size: 1.5rem; }
-        .social-icons a { color: white; }
+        .social-icons { display: flex; gap: 15px; font-size: 1.8rem; }
+        .social-icons a { color: white; transition: 0.3s; }
+        .social-icons a:hover { color: var(--azul-boton); }
     </style>
 </head>
 <body>
@@ -98,12 +99,12 @@
         <div class="footer-content">
             <div>
                 <h3 style="margin:0;">Electripartes Infrarojo</h3>
-                <p style="color: #ccc; font-size: 0.9rem;">Comercializamos equipos de instrumentación, control, automatización y electricidad...</p>
+                <p style="color: #ccc; font-size: 0.9rem; max-width: 500px;">Comercializamos equipos de instrumentación, control, automatización y electricidad trabajamos con las marcas líderes en el mercado</p>
             </div>
             <div class="social-icons">
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="https://wa.me/584145483400"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://www.facebook.com/electripartes.infrarojo" target="_blank"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.instagram.com/electripartes?igsh=MWYwdHg0dWE4d2Vrdg==" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://wa.me/584145483400" target="_blank"><i class="fab fa-whatsapp"></i></a>
             </div>
         </div>
         <p style="text-align: center; font-size: 0.8rem; color: #666; margin-top: 30px;">© 2026 Electripartes Infrarojo. Todos los derechos reservados.</p>
