--- a/contacto.html
+++ b/contacto.html
@@ -3,38 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <title>Contacto | Electripartes Infrarojo</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
-        body { margin: 0; font-family: 'Roboto', sans-serif; background: #0a1931; color: white; text-align: center; }
-        .logo-nav { padding: 20px; text-align: left; }
-        .asesor { display: flex; justify-content: space-around; align-items: center; max-width: 700px; margin: 20px auto; border-bottom: 1px solid #333; padding: 10px; }
-        .btn-wa { background: #4c8bf5; color: white; padding: 10px 20px; text-decoration: none; border-radius: 3px; font-weight: bold; }
-        
-        .container { display: grid; grid-template-columns: 1fr 1fr; max-width: 1000px; margin: 50px auto; background: #444b54; border-radius: 8px; overflow: hidden; }
-        .form-side { padding: 30px; text-align: left; }
-        input, textarea { width: 100%; margin: 10px 0; padding: 10px; border: none; }
-        .btn-enviar { width: 100%; padding: 15px; background: white; border: none; font-weight: bold; cursor: pointer; }
-        iframe { width: 100%; height: 100%; border: 0; min-height: 400px; }
+        :root { --azul: #0a1931; --azul-footer: #050c1a; }
+        body { margin: 0; font-family: 'Roboto', sans-serif; background: var(--azul); color: white; }
+        nav { display: flex; justify-content: space-between; padding: 20px 5%; align-items: center; }
+        .logo img { height: 50px; }
+        .nav-links { list-style: none; display: flex; gap: 20px; }
+        .nav-links a { color: white; text-decoration: none; font-weight: bold; }
+
+        .asesor-seccion { padding: 40px 5%; text-align: center; }
+        .asesor { display: flex; justify-content: space-between; align-items: center; max-width: 800px; margin: 20px auto; border-bottom: 1px solid rgba(255,255,255,0.1); padding: 15px; }
+        .btn-wa { background: #4c8bf5; color: white; padding: 10px 25px; text-decoration: none; border-radius: 4px; font-weight: bold; display: flex; align-items: center; gap: 10px; }
+
+        .container-form { display: grid; grid-template-columns: 1fr 1fr; max-width: 1000px; margin: 50px auto; background: #444b54; border-radius: 8px; overflow: hidden; box-shadow: 0 10px 30px rgba(0,0,0,0.5); }
+        .form-side { padding: 40px; text-align: left; }
+        input, textarea { width: 100%; margin: 10px 0; padding: 12px; border: none; border-radius: 4px; box-sizing: border-box; }
+        .btn-enviar { width: 100%; padding: 15px; background: white; color: #333; border: none; font-weight: 900; cursor: pointer; text-transform: uppercase; }
+        iframe { width: 100%; height: 100%; border: 0; min-height: 450px; }
+
+        footer { background: var(--azul-footer); padding: 40px 5%; border-top: 1px solid #333; }
+        .footer-content { display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; gap: 20px; }
+        .social-icons { display: flex; gap: 15px; font-size: 1.8rem; }
+        .social-icons a { color: white; transition: 0.3s; }
+        .social-icons a:hover { color: #4c8bf5; }
+
+        @media (max-width: 768px) { .container-form { grid-template-columns: 1fr; } }
     </style>
 </head>
 <body>
-    <div class="logo-nav"><img src="img/logo.png" height="50"></div>
+    <nav>
+        <div class="logo"><img src="img/logo.png" alt="Logo"></div>
+        <ul class="nav-links">
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="nosotros.html">Nosotros</a></li>
+        </ul>
+    </nav>
     
-    <h1>ASESORES DE VENTA</h1>
-    <div class="asesor"><span>DANIELA PÉREZ</span> <a href="https://wa.me/584145483400" class="btn-wa">BOTÓN</a></div>
-    <div class="asesor"><span>KEVIN PÉREZ</span> <a href="#" class="btn-wa">BOTÓN</a></div>
+    <div class="asesor-seccion">
+        <h1 style="letter-spacing: 2px;">ASESORES DE VENTA</h1>
+        <div class="asesor"><span>DANIELA PÉREZ</span> <a href="https://wa.me/584145483400" target="_blank" class="btn-wa">BOTÓN <i class="fab fa-whatsapp"></i></a></div>
+        <div class="asesor"><span>KEVIN PÉREZ</span> <a href="https://wa.me/584120000000" target="_blank" class="btn-wa">BOTÓN <i class="fab fa-whatsapp"></i></a></div>
+    </div>
 
-    <div class="container">
+    <div class="container-form">
         <div class="form-side">
-            <h2>Solicita tu cotización</h2>
-            <input type="email" placeholder="Correo electrónico">
-            <input type="text" placeholder="Nombre">
-            <textarea rows="4" placeholder="Mensaje"></textarea>
+            <h2 style="font-size: 2rem; margin-top: 0;">Solicita tu cotización</h2>
+            <label>Correo electrónico</label>
+            <input type="email" placeholder="Introduzca una dirección de correo">
+            <label>Nombre</label>
+            <input type="text" placeholder="Introduce tu nombre">
+            <label>Mensaje</label>
+            <textarea rows="5" placeholder="Escriba su mensaje aquí..."></textarea>
             <button class="btn-enviar">ENTREGAR</button>
         </div>
         <div>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3928.232303490333!2d-69.340989!3d10.063604!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e8767ff4d3ba425%3A0xe355c30ffe01c75e!2sELECTRIPARTES%20INFRAROJO!5e0!3m2!1ses!2sve!4v1700000000000"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3928.172421376043!2d-69.3444853!3d10.0847119!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e8767f74d3ba225%3A0xe355c30fbe01c75e!2sELECTRIPARTES%20INFRAROJO!5e0!3m2!1ses!2sve!4v1708800000000!5m2!1ses!2sve"></iframe>
         </div>
     </div>
+
+    <footer>
+        <div class="footer-content">
+            <div>
+                <h3 style="margin:0;">Electripartes Infrarojo</h3>
+                <p style="color: #ccc; font-size: 0.9rem;">Comercializamos equipos de instrumentación, control, automatización y electricidad.</p>
+            </div>
+            <div class="social-icons">
+                <a href="https://www.facebook.com/electripartes.infrarojo" target="_blank"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.instagram.com/electripartes?igsh=MWYwdHg0dWE4d2Vrdg==" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://wa.me/584145483400" target="_blank"><i class="fab fa-whatsapp"></i></a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
